@@ -2,13 +2,13 @@ MAYA_BASE=/usr/autodesk/maya2011-x64
 CXXFLAGS_MAYA= -pipe -D_BOOL -DLINUX -w -c -I$(MAYA_BASE)/include
 CXXFLAGS=-D_DEBUG -Wall -pedantic -Wno-long-long $(CXXFLAGS_MAYA)
 LDFLAGS=-L$(MAYA_BASE)/lib
-LDLIBS=-lOpenMaya -losg -losgDB
+LDLIBS=-lOpenMaya -losg -losgDB -losgViewerd
 #VPATH=../../src
 
 vpath %.h ../../src
 vpath %.cpp ../../src
 
-OBJS=maya2osg.o dagnode.o group.o transform.o mesh.o shader.o texture.o config.o lights.o directionallight.o pointlight.o spotlight.o cameraanimation.o
+OBJS=maya2osg.o dagnode.o group.o transform.o mesh.o shader.o texture.o config.o lights.o directionallight.o pointlight.o spotlight.o cameraanimation.o camera.o
 TARGET=../bin/maya2osg.so
 INSTDIR=$(MAYA_BASE)/bin/plug-ins
 
