@@ -60,7 +60,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/export:initializePlugin /export:uninitializePlugin"
-				AdditionalDependencies="Foundation.lib OpenMaya.lib osgd.lib osgDBd.lib opengl32.lib OpenMayaAnim.lib pthreadVC2.lib"
+				AdditionalDependencies="Foundation.lib OpenMaya.lib osgd.lib osgDBd.lib osgViewerd.lib opengl32.lib OpenMayaAnim.lib pthreadVC2.lib"
 				OutputFile="$(OutDir)/$(ProjectName).mll"
 				AdditionalLibraryDirectories=""
 				RandomizedBaseAddress="1"
@@ -133,7 +133,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/export:initializePlugin /export:uninitializePlugin"
-				AdditionalDependencies="Foundation.lib OpenMaya.lib OpenMayaAnim.lib osg.lib osgDB.lib pthreadVC2.lib opengl32.lib"
+				AdditionalDependencies="Foundation.lib OpenMaya.lib OpenMayaAnim.lib osg.lib osgDB.lib osgViewer.lib pthreadVC2.lib opengl32.lib"
 				OutputFile="$(OutDir)/$(ProjectName).mll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
@@ -172,6 +172,10 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm"
 			>
+			<File
+				RelativePath="..\..\src\camera.cpp"
+				>
+			</File>
 			<File
 				RelativePath="..\..\src\cameraanimation.cpp"
 				>
@@ -229,6 +233,10 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc"
 			>
+			<File
+				RelativePath="..\..\src\camera.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\src\cameraanimation.h"
 				>
